Fix failing tests * Mock fetch in CourseSelectColumn * replace broken MUI Box in CollapsedCourseCard

--- a/autoscheduler/frontend/src/components/SchedulingPage/CourseSelectColumn/CourseSelectCard/CollapsedCourseCard/CollapsedCourseCard.css
+++ b/autoscheduler/frontend/src/components/SchedulingPage/CourseSelectColumn/CourseSelectCard/CollapsedCourseCard/CollapsedCourseCard.css
@@ -7,3 +7,8 @@
     align-items: center;
     cursor: pointer;
 }
+
+.custom-box {
+    display: flex;
+    flex-direction: row;
+}
